[package]
name = "ui3-web-backend"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui3-core = { path = "../ui3-core" }
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
bevy_ecs = { path = "../../bevy/crates/bevy_ecs" }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "HtmlInputElement",
    "Document"
]