[package]
name = "web-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui3-core = { path = "../ui3-core" }
ui3-web-backend = { path = "../ui3-web-backend" }
wasm-bindgen = "0.2.74"
bevy_ecs = { path = "../../bevy/crates/bevy_ecs" }
